--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^4.12.0",
     "socket.io": "^4.7.2",
     "socket.io-client": "^4.7.2"
